Aplica atualização nos estilos das paginas de navegacao

--- a/src/main/resources/templates/fragmentos/navSecretaria.html
+++ b/src/main/resources/templates/fragmentos/navSecretaria.html
@@ -37,16 +37,16 @@
               Secretaria
             </a>
             <ul
-                    class="dropdown-menu"
+                    class="dropdown-menu dropdown-menu-dark"
                     aria-labelledby="navbarScrollingDropdown"
             >
               <li>
                 <a class="dropdown-item" href="/cadastroaluno"
-                >Cadastro de Alunos/Professores/Salas</a
+                >Cadastro de Usuarios/Salas</a
                 >
               </li>
               <a class="dropdown-item" href="/manteralunos"
-              >Atualizar Cadastro de Alunos/Professores/Salas</a
+              >Atualizar dados Usuarios/Salas</a
               >
             </li>
               <li>
@@ -54,6 +54,7 @@
                 >Gerenciamento de Mensalidades</a
                 >
               </li>
+              <li><hr class="dropdown-divider"></li>
               <li>
                 <a class="dropdown-item" href="/">Logout</a>
               </li>
