--- a/src/main/resources/templates/gerenciaMensalidade.html
+++ b/src/main/resources/templates/gerenciaMensalidade.html
@@ -25,11 +25,11 @@
 <div th:replace="fragmentos/navSecretaria :: nav"></div>
 
 <main class="container">
+    <h1 align="center" style="color:gray">
+        Gerenciamento de Mensalidades
+    </h1>
     <div class="vh-100 p-4">
         <form class="row g-3 borda">
-            <h1 class="text-center text-white pb-4">
-                Gerenciamento de Mensalidades
-            </h1>
             <div class="col-md-5">
                 <label for="inputEmail4" class="form-label"
                 >Nome do aluno</label
