--- a/src/main/resources/templates/fragmentos/footer.html
+++ b/src/main/resources/templates/fragmentos/footer.html
@@ -2,7 +2,7 @@
     <!-- Grid container -->
     <div class="container p-1">
         <!-- Section: Social media -->
-        <section class="mb-4">
+        <div class="mb-4">
             <!-- Facebook -->
             <a
                 class="btn btn-outline-light btn-floating m-1"
@@ -50,13 +50,13 @@
                 role="button "
                 ><i class="fab fa-github"></i
             ></a>
-        </section>
+        </div>
         <!-- Section: Social media -->
 
         <!-- Section: Text -->
-        <section>
+        <div>
             <p>Endereço: Rua XX, número: XX - Bairro: Centro, Uberlândia.</p>
-        </section>
+        </div>
         <!-- Section: Text -->
     </div>
     <!-- Grid container -->
