--- a/src/main/resources/templates/fragmentos/nav.html
+++ b/src/main/resources/templates/fragmentos/nav.html
@@ -27,10 +27,27 @@
                         >
                     </li>
                     <li class="nav-item mx-4">
-                        <a class="nav-link active" href="/login">Login</a>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                                Login
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                                <button class="dropdown-item" type="button" onclick="window.location.assign('/auth')">
+                                    Eu sou Aluno
+                                </button>
+                                <button class="dropdown-item" type="button" onclick="window.location.assign('/salas')">
+                                    Eu sou Professor
+                                </button>
+                                <li><hr class="dropdown-divider"></li>
+                                    <button class="dropdown-item" type="button" onclick="window.location.assign('/cadastroaluno')">
+                                        Secretaria
+                                    </button>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
+
