--- a/src/main/resources/templates/fragmentos/navLogin.html
+++ b/src/main/resources/templates/fragmentos/navLogin.html
@@ -37,7 +37,7 @@
                             Aluno Logado
                         </a>
                         <ul
-                            class="dropdown-menu"
+                            class="dropdown-menu dropdown-menu-dark"
                             aria-labelledby="navbarScrollingDropdown"
                         >
                             <li>
