--- a/src/main/resources/templates/manterAlunos.html
+++ b/src/main/resources/templates/manterAlunos.html
@@ -1,268 +1,166 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Smart School</title>
-        <link
-            href="../static/css/style.css"
-            th:href="@{/css/style.css}"
-            rel="stylesheet"
-        />
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous"
-        />
-        <link
-            rel="stylesheet"
-            href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
-        />
-        <style>
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"/>
+    <style>
             .input-group {
                 padding: 10px;
             }
-        </style>
-    </head>
-    <body>
-        <div th:replace="fragmentos/navSecretaria :: nav"></div>
 
-        <main class="container">
-            <ul class="nav justify-content-center p-3">
-                <li class="nav-item">
-                    <a
-                        class="nav-link active"
-                        aria-current="page"
-                        href="/manteralunos"
-                        style="
-                            background-color: #e6e6fa;
-                            border-radius: 25px;
-                            margin: 8px;
-                        "
-                        >Atualizar Cadastro Aluno</a
-                    >
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/manterprofessores"
-                        >Atualizar Cadastro Professores</a
-                    >
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/mantersala"
-                        >Atualizar Cadastro Salas de Aula</a
-                    >
-                </li>
-            </ul>
 
-            <div
-                class="alert alert-success"
-                role="alert"
-                th:if="${!#strings.isEmpty(sucessmensage)}"
-            >
-                <span th:text="${sucessmensage}">!</span>
-            </div>
 
-            <form class="input-group mb-3" th:action="@{/manteralunos}">
-                <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Login ou CPF"
-                    th:name="identidadeAluno"
-                />
-                <button
-                    class="btn btn-outline-secondary"
-                    id="button-addon2"
-                    type="submit"
-                >
-                    Procurar
-                </button>
-            </form>
-            <form
-                class=""
-                action="/manteralunos"
-                method="POST"
-                th:object="${aluno}"
-            >
+    </style>
+    <title>Smart School</title>
+</head>
+<body>
+<div th:replace="fragmentos/navSecretaria :: nav"></div>
+
+<main class="container">
+    <div>
+        <ul class="nav justify-content-center p-3">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/manteralunos" style="
+                                background-color: #e6e6fa;
+                                border-radius: 25px;
+                                margin: 8px;
+                            ">Atualizar Cadastro Aluno</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/manterprofessores">Atualizar Cadastro Professores</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/mantersala">Atualizar Cadastro Salas de Aula</a>
+            </li>
+        </ul>
+    </div>
+    <div class="alert alert-success" role="alert" th:if="${!#strings.isEmpty(sucessmensage)}">
+        <span th:text="${sucessmensage}">!</span>
+    </div>
+    <div>
+        <form class="input-group mb-3" th:action="@{/manteralunos}">
+            <input type="text" class="form-control" placeholder="Login ou CPF" th:name="identidadeAluno"/>
+            <button class="btn btn-outline-secondary" id="button-addon2" type="submit">
+                Pesquisa
+            </button>
+        </form>
+    </div>
+    <div class="col-sm-9 d-flex justify-content-center align-items-center container">
+        <form class="" action="/manteralunos" method="POST" th:object="${aluno}">
+            <h2 style="color: gray" align="center">Formulário para atualizar dados do Aluno</h2>
+            <div class="border border-2 border-secondary rounded" style="padding: 2em">
+                <div class="row">
+                    <div class="input-group col">
+                        <span class="input-group-text">Nome</span>
+                        <input type="text" aria-label="Nome" class="form-control" th:field="*{usuario.nome}" required/>
+                    </div>
+                    <div class="input-group col">
+                        <span class="input-group-text">CPF</span>
+                        <input type="number" aria-label="CPF" class="form-control" th:field="*{usuario.cpf}"
+                               maxlength="11"
+                               minlength="11" readonly/>
+                    </div>
+                    <div class="alert alert-warning" th:if="${#fields.hasErrors('usuario.cpf')}"
+                         th:errors="*{usuario.cpf}"></div>
+                </div>
+                <div class="row">
+                    <div class="input-group col">
+                        <span class="input-group-text">RG</span>
+                        <input type="number" aria-label="RG" class="form-control" th:field="*{usuario.rg}"
+                               maxlength="11"
+                               required/>
+                    </div>
+                    <div class="input-group col">
+                        <span class="input-group-text">Telefone</span>
+                        <input type="number" aria-label="Telefone" class="form-control" th:field="*{usuario.telefone}"
+                               maxlength="11" required/>
+                        <div class="alert alert-warning" th:if="${#fields.hasErrors('usuario.telefone')}"
+                             th:errors="*{usuario.telefone}"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-group col">
+                        <span class="input-group-text">E-mail</span>
+                        <input type="email" aria-label="E-mail" class="form-control" th:field="*{usuario.email}"
+                               required/>
+                    </div>
+                    <div class="input-group col">
+                        <span class="input-group-text">Data de Nascimento</span>
+                        <input type="date" aria-label="Data de Nascimento" class="form-control"
+                               th:field="*{usuario.dataNasc}" required/>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="input-group col">
+                        <span class="input-group-text">Matricula</span>
+                        <input type="text" aria-label="Matricula" class="form-control" th:field="*{matricula}"
+                               maxlength="14"/>
+                    </div>
+                    <div class="input-group col">
+                        <span class="input-group-text">Data da Matrícula</span>
+                        <input type="date" aria-label="DataMatricula" class="form-control" th:field="*{dataMatricula}"/>
+                    </div>
+                </div>
                 <div class="input-group">
                     <span class="input-group-text">Login</span>
-                    <input
-                        type="text"
-                        aria-label="Login"
-                        class="form-control"
-                        th:field="*{usuario.login}"
-                        maxlength="10"
-                        readonly
-                    />
-                </div>
-                <div class="input-group">
-                    <span class="input-group-text">RG</span>
-                    <input
-                        type="number"
-                        aria-label="RG"
-                        class="form-control"
-                        th:field="*{usuario.rg}"
-                        maxlength="11"
-                        required
-                    />
-                </div>
-                <div class="input-group">
-                    <span class="input-group-text">Telefone</span>
-                    <input
-                        type="number"
-                        aria-label="Telefone"
-                        class="form-control"
-                        th:field="*{usuario.telefone}"
-                        maxlength="11"
-                        required
-                    />
-                    <div
-                        class="alert alert-warning"
-                        th:if="${#fields.hasErrors('usuario.telefone')}"
-                        th:errors="*{usuario.telefone}"
-                    ></div>
-                </div>
-                <div class="input-group">
-                    <span class="input-group-text">Endereço</span>
-                    <input
-                        type="text"
-                        aria-label="Endereco"
-                        class="form-control"
-                        th:field="*{usuario.endereco}"
-                        required
-                    />
-                </div>
-                <div class="input-group">
-                    <span class="input-group-text">Data de Nascimento</span>
-                    <input
-                        type="date"
-                        aria-label="Data de Nascimento"
-                        class="form-control"
-                        th:field="*{usuario.dataNasc}"
-                        required
-                    />
-                </div>
-                <div class="input-group">
-                    <span class="input-group-text">E-mail</span>
-                    <input
-                        type="email"
-                        aria-label="E-mail"
-                        class="form-control"
-                        th:field="*{usuario.email}"
-                        required
-                    />
-                </div>
-                <div class="input-group">
-                    <span class="input-group-text">Nome</span>
-                    <input
-                        type="text"
-                        aria-label="Nome"
-                        class="form-control"
-                        th:field="*{usuario.nome}"
-                        required
-                    />
-                </div>
-                <div class="input-group">
-                    <span class="input-group-text">CPF</span>
-                    <input
-                        type="number"
-                        aria-label="CPF"
-                        class="form-control"
-                        th:field="*{usuario.cpf}"
-                        maxlength="11"
-                        minlength="11"
-                        readonly
-                    />
-                </div>
-                <div
-                    class="alert alert-warning"
-                    th:if="${#fields.hasErrors('usuario.cpf')}"
-                    th:errors="*{usuario.cpf}"
-                ></div>
-                <div class="input-group">
-                    <span class="input-group-text">Matricula</span>
-                    <input
-                        type="text"
-                        aria-label="Matricula"
-                        class="form-control"
-                        th:field="*{matricula}"
-                        maxlength="14"
-                    />
+                    <input type="text" aria-label="Login" class="form-control" th:field="*{usuario.login}"
+                           maxlength="10"
+                           readonly/>
                 </div>
                 <div class="input-group">
                     <span class="input-group-text">Nome da Mãe</span>
-                    <input
-                        type="text"
-                        aria-label="Nome da Mãe"
-                        class="form-control"
-                        th:field="*{nomeMae}"
-                        required
-                    />
+                    <input type="text" aria-label="Nome da Mãe" class="form-control" th:field="*{nomeMae}" required/>
                 </div>
                 <div class="input-group">
                     <span class="input-group-text">Nome do Pai</span>
-                    <input
-                        type="text"
-                        aria-label="Nome do Pai"
-                        class="form-control"
-                        th:field="*{nomePai}"
-                        required
-                    />
+                    <input type="text" aria-label="Nome do Pai" class="form-control" th:field="*{nomePai}" required/>
                 </div>
-                <div class="input-group">
-                    <span class="input-group-text">Data da Matrícula</span>
-                    <input
-                        type="date"
-                        aria-label="DataMatricula"
-                        class="form-control"
-                        th:field="*{dataMatricula}"
-                    />
+                <div class="row">
+                    <div class="input-group col">
+                        <span class="input-group-text">Endereço</span>
+                        <input type="text" aria-label="Endereco" class="form-control" th:field="*{usuario.endereco}"
+                               required/>
+                    </div>
+                    <div class="input-group col">
+                        <span class="input-group-text">Telefone do responsável</span>
+                        <input type="number" aria-label="Telefone" class="form-control" th:field="*{telResponsavel}"
+                               maxlength="11" required/>
+                    </div>
                 </div>
-                <div class="input-group">
-                    <span class="input-group-text"
-                        >Telefone do responsável</span
-                    >
-                    <input
-                        type="number"
-                        aria-label="Telefone"
-                        class="form-control"
-                        th:field="*{telResponsavel}"
-                        maxlength="11"
-                        required
-                    />
-                </div>
-                <div
-                    class="alert alert-warning"
-                    th:if="${#fields.hasErrors('telResponsavel')}"
-                    th:errors="*{telResponsavel}"
-                ></div>
-                <div class="d-grid gap-2 col-6 mx-auto p-3">
-                    <button class="btn btn-primary btn-sm" type="submit">
-                        Alterar
-                    </button>
-                </div>
-            </form>
-            <form th:action="@{/manteralunos}" th:method="delete">
-                <input
-                    type="hidden"
-                    th:name="login"
-                    th:value="${aluno?.usuario.login}"
-                />
-                <div class="d-grid gap-2 col-6 mx-auto p-3">
-                    <button class="btn btn-primary btn-sm" type="submit">
-                        Apagar
-                    </button>
-                </div>
-            </form>
-        </main>
+                <div class="alert alert-warning" th:if="${#fields.hasErrors('telResponsavel')}"
+                     th:errors="*{telResponsavel}"></div>
+            </div>
+        </form>
+    </div>
+    <div class="row">
+        <div class="d-grid gap-2 col-sm-3 mx-auto pb-5" style="padding: 2em">
+            <button class="btn btn-primary" type="submit">
+                Alterar
+            </button>
+        </div>
+        <form th:action="@{/manteralunos}" th:method="delete">
+            <input type="hidden" th:name="login" th:value="${aluno?.usuario.login}"/>
+            <div class="d-grid gap-2 col-sm-3 mx-auto pb-5">
+                <button class="btn btn-danger" type="submit">
+                    Apagar
+                </button>
+            </div>
+        </form>
+    </div>
+</main>
 
-        <div th:replace="fragmentos/footer :: footer"></div>
+<div th:replace="fragmentos/footer :: footer"></div>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"
+></script>
+</body>
 </html>
