--- a/src/main/resources/templates/pagAluno.html
+++ b/src/main/resources/templates/pagAluno.html
@@ -26,7 +26,7 @@
 
         <main class="container-lg">
             <div class="row justify-content-center p-3">
-                <h1 class="text-center text-white p-3">Ficha do Aluno</h1>
+                <h1 class="text-center p-3" style="color:$gray-700">Ficha do Aluno</h1>
 
                 <div class="col-sm-1 col-md-6 col-lg-3">
                     <h2 class="text-center text-white">Dados Pessoais</h2>
