--- a/src/main/resources/templates/salas.html
+++ b/src/main/resources/templates/salas.html
@@ -27,7 +27,7 @@
         <main class="container">
             <div class="vh-100 p-4">
                 <form class="row g-3 borda">
-                    <h1 class="text-center text-white pb-4">
+                    <h1 class="text-center pb-4" style="color:gray">
                         Consultar Sala de Aula
                     </h1>
                     <div class="col-md-5">
