--- a/src/main/resources/templates/fragmentos/navSecretaria.html
+++ b/src/main/resources/templates/fragmentos/navSecretaria.html
@@ -2,21 +2,10 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid forCenter">
       <a class="navbar-brand" href="/">
-        <img
-                class="img-fluid"
-                src="../static/img/logo.png"
-                th:attr="src=@{/img/logo.png},title=#{logo},alt=#{logo}"
-        />
+        <img class="img-fluid" src="../static/img/logo.png" th:attr="src=@{/img/logo.png},title=#{logo},alt=#{logo}" />
       </a>
-      <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-      >
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -27,39 +16,24 @@
             </a>
           </li>
           <li class="nav-item dropdown">
-            <a
-                    class="nav-link dropdown-toggle active"
-                    id="navbarScrollingDropdown"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle active" id="navbarScrollingDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
               Secretaria
             </a>
-            <ul
-                    class="dropdown-menu dropdown-menu-dark"
-                    aria-labelledby="navbarScrollingDropdown"
-            >
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarScrollingDropdown">
               <li>
-                <a class="dropdown-item" href="/cadastroaluno"
-                >Cadastro de Usuarios/Salas</a
-                >
+                <a class="dropdown-item" href="/cadastroaluno">Cadastro de Usuarios/Salas</a>
               </li>
-              <a class="dropdown-item" href="/manteralunos"
-              >Atualizar dados Usuarios/Salas</a
-              >
-            </li>
-              <li>
-                <a class="dropdown-item" href="/gerenciamensalidade"
-                >Gerenciamento de Mensalidades</a
-                >
-              </li>
-              <li><hr class="dropdown-divider"></li>
-              <li>
-                <a class="dropdown-item" href="/">Logout</a>
-              </li>
-            </ul>
+              <a class="dropdown-item" href="/manteralunos">Atualizar dados Usuarios/Salas</a>
           </li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          <li>
+            <a class="dropdown-item" href="/">Logout</a>
+          </li>
+        </ul>
+        </li>
         </ul>
       </div>
     </div>
