--- a/src/main/resources/templates/cadastroAluno.html
+++ b/src/main/resources/templates/cadastroAluno.html
@@ -1,151 +1,218 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Smart School</title>
-        <link
-            href="../static/css/style.css"
-            th:href="@{/css/style.css}"
-            rel="stylesheet"
-        />
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous"
-        />
-        <link
-            rel="stylesheet"
-            href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
-        />
-        <style>
-            .input-group {
-                padding: 10px;
-            }
-        </style>
-    </head>
-    <body>
-        <div th:replace="fragmentos/navSecretaria :: nav"></div>
 
-        <main class="container">
-            <div>
-                <ul class="nav justify-content-center p-3">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/cadastroaluno" style=" background-color: #e6e6fa; border-radius: 25px; margin: 8px;">Cadastrar Aluno</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/cadastroprofessor">Cadastrar Professores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/cadastrosala">Cadastrar Salas de Aula</a>
-                    </li>
-                </ul>
-            </div>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Smart School</title>
+    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" />
+    <style>
+        .input-group {
+            padding: 10px;
+        }
+    </style>
+</head>
 
-            <div
-                class="alert alert-danger"
-                role="alert"
-                th:if="${!#strings.isEmpty(dangermensage)}"
-            >
-                <span th:text="${dangermensage}">!</span>
-            </div>
-            <div
-                class="alert alert-success"
-                role="alert"
-                th:if="${!#strings.isEmpty(sucessmensage)}"
-            >
-                <span th:text="${sucessmensage}">!</span>
-            </div>
+<body>
+    <div th:replace="fragmentos/navSecretaria :: nav"></div>
 
-            <div class="col-sm-9 d-flex justify-content-center align-items-center container">
-                <form th:action="@{/cadastroaluno}" class="row align-items-center" method="POST" th:object="${aluno}">
-                    <h2 style="color: gray" align="center">Dados de Login do Aluno</h2>
-                    <div class="border border-2 border-secondary rounded" style="padding: 2em">
-                        <div class="row">
-                            <div class="input-group col">
-                                <span class="input-group-text">Login</span>
-                                <input type="text" aria-label="Login" class="form-control" th:field="*{usuario.login}" maxlength="10" required />
-                            </div>
-                            <div class="input-group col">
-                                <span class="input-group-text">Senha</span>
-                                <input type="password" aria-label="Senha" class="form-control" th:field="*{usuario.senha}" maxlength="10" required />
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-group col">
-                                <span class="input-group-text">E-mail</span>
-                                <input type="email" aria-label="E-mail" class="form-control" th:field="*{usuario.email}" required />
-                            </div>
-                            <div class="input-group col">
-                                <span class="input-group-text col">Telefone</span>
-                                <input type="number" aria-label="Telefone" class="form-control" th:field="*{usuario.telefone}" maxlength="11" required/>
-                                <div class="alert alert-warning"
-                                     th:if="${#fields.hasErrors('usuario.telefone')}"
-                                     th:errors="*{usuario.telefone}"
-                                ></div>
-                            </div>
-                        </div>
-                    </div>
+    <main class="container">
+        <ul class="nav justify-content-center p-3">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/cadastroaluno" style="
+                            background-color: #e6e6fa;
+                            border-radius: 25px;
+                            margin: 8px;
+                        ">Cadastrar Aluno</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/cadastroprofessor">Cadastrar Professores</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/cadastrosala">Cadastrar Salas de Aula</a>
+            </li>
+        </ul>
+        <div class="alert alert-danger" role="alert" th:if="${!#strings.isEmpty(dangermensage)}">
+            <span th:text="${dangermensage}">!</span>
+        </div>
+        <div class="alert alert-success" role="alert" th:if="${!#strings.isEmpty(sucessmensage)}">
+            <span th:text="${sucessmensage}">!</span>
+        </div>
 
-                    <div style="padding: 2em"></div>
-                    <h2 style="color: gray" align="center">Dados Pessoais do Aluno</h2>
-                    <div class="border border-2 border-secondary rounded" style="padding: 2em">
-                        <div class="row">
-                            <div class="input-group col">
-                                <span class="input-group-text">Nome</span>
-                                <input type="text" aria-label="Nome" class="form-control" th:field="*{usuario.nome}" required/>
-                            </div>
-                            <div class="input-group col">
-                                <span class="input-group-text">CPF</span>
-                                <input type="number" aria-label="CPF" class="form-control" th:field="*{usuario.cpf}" maxlength="11" minlength="11" required/>
-                            </div>
-                            <div class="alert alert-warning" th:if="${#fields.hasErrors('usuario.cpf')}" th:errors="*{usuario.cpf}"></div>
-                        </div>
-                        <div class="row">
-                            <div class="input-group col">
-                                <span class="input-group-text">RG</span>
-                                <input type="number" aria-label="RG" class="form-control" th:field="*{usuario.rg}" maxlength="11" required/>
-                            </div>
-                            <div class="input-group col">
-                                <span class="input-group-text">Data de Nascimento</span>
-                                <input type="date" aria-label="Data de Nascimento" class="form-control" th:field="*{usuario.dataNasc}" required/>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-group col">
-                                <span class="input-group-text">Matricula</span>
-                                <input type="text" aria-label="Matricula" class="form-control" th:field="*{matricula}" maxlength="14"/>
-                            </div>
-                            <div class="input-group col">
-                                <span class="input-group-text">Data da Matrícula</span>
-                                <input type="date" aria-label="DataMatricula" class="form-control" th:field="*{dataMatricula}"/>
-                            </div>
-                        </div>
-                        <div class="input-group">
-                            <span class="input-group-text">Endereço</span>
-                            <input type="text" aria-label="Endereco" class="form-control" th:field="*{usuario.endereco}" required/>
-                        </div>
-                        <div class="input-group">
-                            <span class="input-group-text">Nome da Mãe</span>
-                            <input type="text" aria-label="Nome da Mãe" class="form-control" th:field="*{nomeMae}" required />
-                        </div>
-                        <div class="input-group">
-                            <span class="input-group-text">Nome do Pai</span>
-                            <input type="text" aria-label="Nome do Pai" class="form-control" th:field="*{nomePai}" required/>
-                        </div>
-                        <div class="input-group">
-                            <span class="input-group-text">Telefone do responsável</span>
-                            <input type="number" aria-label="Telefone" class="form-control" th:field="*{telResponsavel}" maxlength="11" required/>
-                        </div>
-                        <div class="alert alert-warning" th:if="${#fields.hasErrors('telResponsavel')}" th:errors="*{telResponsavel}"></div>
-                    </div>
-                    <div class="d-grid gap-2 col-sm-3 mx-auto pb-5" style="padding: 2em">
-                        <input class="btn btn-primary btn-sm" value="Cadastrar" type="submit"/>
-                    </div>
-                </form>
-            </div>
+        <form th:action="@{/cadastroaluno}" method="POST" th:object="${aluno}">
+            <div class="input-group">
+                <span class="input-group-text">Login</span>
+                <input type="text" aria-label="Login" class="form-control" th:field="*{usuario.login}" maxlength="11"
+                    required />
+                <div class="alert alert-warning" th:if="${#fields.hasErrors('usuario.login')}" th:errors="*{usuario.login}"></div>
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text">Senha</span>
+                    <input
+                        type="password"
+                        aria-label="Senha"
+                        class="form-control"
+                        th:field="*{usuario.senha}"
+                        maxlength="10"
+                        required
+                    />
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text">RG</span>
+                    <input
+                        type="number"
+                        aria-label="RG"
+                        class="form-control"
+                        th:field="*{usuario.rg}"
+                        maxlength="11"
+                        required
+                    />
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text">Telefone</span>
+                    <input
+                        type="number"
+                        aria-label="Telefone"
+                        class="form-control"
+                        th:field="*{usuario.telefone}"
+                        maxlength="11"
+                        required
+                    />
+                    <div class="alert alert-warning" th:if="${#fields.hasErrors('usuario.telefone')}" th:errors="*{usuario.telefone}"></div>
+                    <div
+                        class="alert alert-warning"
+                        th:if="${#fields.hasErrors('usuario.telefone')}"
+                        th:errors="*{usuario.telefone}"
+                    ></div>
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text">Endereço</span>
+                    <input
+                        type="text"
+                        aria-label="Endereco"
+                        class="form-control"
+                        th:field="*{usuario.endereco}"
+                        required
+                    />
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text">Data de Nascimento</span>
+                    <input
+                        type="date"
+                        aria-label="Data de Nascimento"
+                        class="form-control"
+                        th:field="*{usuario.dataNasc}"
+                        required
+                    />
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text">E-mail</span>
+                    <input
+                        type="email"
+                        aria-label="E-mail"
+                        class="form-control"
+                        th:field="*{usuario.email}"
+                        required
+                    />
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text">Nome</span>
+                    <input
+                        type="text"
+                        aria-label="Nome"
+                        class="form-control"
+                        th:field="*{usuario.nome}"
+                        required
+                    />
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text">CPF</span>
+                    <input
+                        type="number"
+                        aria-label="CPF"
+                        class="form-control"
+                        th:field="*{usuario.cpf}"
+                        maxlength="11"
+                        minlength="11"
+                        required
+                    />
+                </div>
+                <div
+                    class="alert alert-warning"
+                    th:if="${#fields.hasErrors('usuario.cpf')}"
+                    th:errors="*{usuario.cpf}"
+                ></div>
+                <div class="input-group">
+                    <span class="input-group-text">Matricula</span>
+                    <input
+                        type="text"
+                        aria-label="Matricula"
+                        class="form-control"
+                        th:field="*{matricula}"
+                        maxlength="14"
+                    />
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text">Nome da Mãe</span>
+                    <input
+                        type="text"
+                        aria-label="Nome da Mãe"
+                        class="form-control"
+                        th:field="*{nomeMae}"
+                        required
+                    />
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text">Nome do Pai</span>
+                    <input
+                        type="text"
+                        aria-label="Nome do Pai"
+                        class="form-control"
+                        th:field="*{nomePai}"
+                        required
+                    />
+                </div>
+                <div class="alert alert-warning" th:if="${#fields.hasErrors('nomePai')}" th:errors="*{nomePai}"></div>
+                <div class="input-group">
+                    <span class="input-group-text">Data da Matrícula</span>
+                    <input
+                        type="date"
+                        aria-label="DataMatricula"
+                        class="form-control"
+                        th:field="*{dataMatricula}"
+                    />
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text"
+                        >Telefone do responsável</span
+                    >
+                    <input
+                        type="number"
+                        aria-label="Telefone"
+                        class="form-control"
+                        th:field="*{telResponsavel}"
+                        maxlength="11"
+                        required
+                    />
+                    <div class="alert alert-warning" th:if="${#fields.hasErrors('telResponsavel')}" th:errors="*{telResponsavel}"></div>
+                </div>
+                 <div
+                    class="alert alert-warning"
+                    th:if="${#fields.hasErrors('telResponsavel')}"
+                    th:errors="*{telResponsavel}"
+                ></div>
+                <div class="d-grid gap-2 col-sm-3 mx-auto pb-5">
+                    <input
+                        class="btn btn-primary btn-sm"
+                        value="Cadastrar"
+                        type="submit"
+                    />
+                </div>
+            </form>
         </main>
 
         <div th:replace="fragmentos/footer :: footer"></div>
