--- a/src/main/resources/templates/cadastroSala.html
+++ b/src/main/resources/templates/cadastroSala.html
@@ -1,84 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" />
-        <style>
-            .input-group{
-                padding: 10px;
-            }
-        </style>
-        <title>Smart School</title>
-    </head>
-    <body>
-        <div th:replace="fragmentos/navSecretaria :: nav"></div>
 
-        <main class="container">
-            <div>
-                <ul class="nav justify-content-center p-3">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/cadastroaluno">Cadastrar Aluno</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/cadastroprofessor" >Cadastrar Professores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/cadastrosala" style="background-color:#E6E6FA; border-radius: 25px; margin:8px;">Cadastrar Salas de Aula</a>
-                    </li>
-                </ul>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Smart School</title>
+    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" />
+    <style>
+        .input-group {
+            padding: 10px;
+        }
+    </style>
+</head>
+
+<body>
+    <div th:replace="fragmentos/navSecretaria :: nav"></div>
+
+    <main class="container">
+        <ul class="nav justify-content-center p-3">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/cadastroaluno">Cadastrar Aluno</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/cadastroprofessor">Cadastrar Professores</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/cadastrosala" style="
+                            background-color: #e6e6fa;
+                            border-radius: 25px;
+                            margin: 8px;
+                        ">Cadastrar Salas de Aula</a>
+            </li>
+        </ul>
+        <div class="alert alert-danger" role="alert" th:if="${!#strings.isEmpty(dangermensage)}">
+            <span th:text="${dangermensage}">!</span>
+        </div>
+        <div class="alert alert-success" role="alert" th:if="${!#strings.isEmpty(sucessmensage)}">
+            <span th:text="${sucessmensage}">!</span>
+        </div>
+        <form action="" class="vh-100" th:action="@{/cadastrosala}" method="POST" th:object="${sala}">
+            <div class="input-group">
+                <span class="input-group-text">Turma</span>
+                <input type="text" aria-label="Código" class="form-control" th:field="*{turma}" />
             </div>
-
-            <div class="col-sm-9 d-flex justify-content-center align-items-center container">
-                <form action="">
-                    <h2 style="color: gray" align="center">Dados de Login do Professor</h2>
-                    <div class="border border-2 border-secondary rounded" style="padding: 2em">
-                        <div class="row">
-                            <div class="input-group col">
-                                <span class="input-group-text">Código da Turma</span>
-                                <input type="text" aria-label="Código" class="form-control">
-                            </div>
-                            <div class="input-group col">
-                                <span class="input-group-text">Local da Sala</span>
-                                <input type="text" aria-label="sala" class="form-control">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-group col">
-                                <span class="input-group-text">Nome do Professor</span>
-                                <input type="text" aria-label="Nome" class="form-control">
-                            </div>
-                            <div class="input-group col">
-                                <span class="input-group-text">Qtd. Alunos</span>
-                                <input type="number" aria-label="Qtd" class="form-control">
-                            </div>
-                        </div>
-
-
-                            <div class="input-group">
-                                <span class="input-group-text">Alunos</span>
-                                <input type="text" aria-label="Alunos" class="form-control" width="3em">
-                            </div>
-
-                    </div>
-                        <div class="d-grid gap-2 col-sm-3 mx-auto pb-5" style="padding: 2em">
-                            <button class="btn btn-primary btn-sm" type="button" >
-                                Salvar
-                            </button>
-                        </div>
-                </form>
+            <div class="input-group">
+                <span class="input-group-text">Código da Sala</span>
+                <input type="number" aria-label="Código" class="form-control" th:field="*{cod_sala}" />
             </div>
-        </main>
+            <div class="input-group">
+                <span class="input-group-text">Qtd. Alunos</span>
+                <input type="number" aria-label="Qtd" class="form-control" th:field="*{qtd_alunos}" />
+            </div>
+            <div class="input-group">
+                <span class="input-group-text">Local da Sala</span>
+                <input type="text" aria-label="sala" class="form-control" th:field="*{local_sala}" />
+            </div>
+            <div class="d-grid gap-2 col-3 mx-auto p-3">
+                <button class="btn btn-primary btn-sm" type="submit">
+                    Cadastrar
+                </button>
+            </div>
+        </form>
+    </main>
 
-        <div th:replace="fragmentos/footer :: footer"></div>
+    <div th:replace="fragmentos/footer :: footer"></div>
 
-        <script
-                src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-                crossorigin="anonymous"
-        ></script>
-    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+    </script>
+</body>
+
 </html>
