--- a/src/main/resources/templates/fragmentos/navLogin.html
+++ b/src/main/resources/templates/fragmentos/navLogin.html
@@ -2,21 +2,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid forCenter">
             <a class="navbar-brand" href="/">
-                <img
-                    class="img-fluid"
-                    src="../static/img/logo.png"
-                    th:attr="src=@{/img/logo.png},title=#{logo},alt=#{logo}"
-                />
+                <img class="img-fluid" src="../static/img/logo.png"
+                    th:attr="src=@{/img/logo.png},title=#{logo},alt=#{logo}" />
             </a>
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-            >
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -27,23 +18,13 @@
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a
-                            class="nav-link dropdown-toggle active"
-                            id="navbarScrollingDropdown"
-                            role="button"
-                            data-bs-toggle="dropdown"
-                            aria-expanded="false"
-                        >
+                        <a class="nav-link dropdown-toggle active" id="navbarScrollingDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Aluno Logado
                         </a>
-                        <ul
-                            class="dropdown-menu dropdown-menu-dark"
-                            aria-labelledby="navbarScrollingDropdown"
-                        >
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarScrollingDropdown">
                             <li>
-                                <a class="dropdown-item" href="/aluno"
-                                    >Dados Pessoais</a
-                                >
+                                <a class="dropdown-item" href="/aluno">Dados Pessoais</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="/">Logout</a>
