busca por codsala

--- a/src/main/resources/templates/manterSala.html
+++ b/src/main/resources/templates/manterSala.html
@@ -45,7 +45,7 @@
         </div>
 
         <form class="input-group mb-3" th:action="@{/mantersala}">
-            <input type="text" class="form-control" placeholder="Codigo/Turma" th:name="identidadeSala" />
+            <input type="text" class="form-control" placeholder="Codigo" th:name="identidadeSala" />
             <button class="btn btn-outline-secondary" id="button-addon2" type="submit">
                 Procurar
             </button>
